feat:检测更新程序

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>来自 Electron 渲染器的问好！</h1>
-    <p>👋</p>
+    <p>检测更新程序👋</p>
     <p id="info"></p>
     <p id="pong"></p>
   </body>
